test: streamline NoOp tests using ProviderInfo